...
        title: Row(
          mainAxisSize: MainAxisSize.min,
          children: [
            SvgPicture.asset('assets/images/icon.svg', width: 24, height: 24),
            const SizedBox(width: 8),
            const Text(
              'Acorde',
              style: TextStyle(
                color: Colors.white,
                fontWeight: FontWeight.bold,
                fontFamily: 'SpaceMono',
              ),
            ),
...
                  borderRadius: BorderRadius.circular(30),
                ),
                elevation: 3,
              ),
              icon: Icon(_isListening ? Icons.stop : Icons.mic),
              label: Text(
                _isListening ? 'Stop Tuning' : 'Start Tuning',
                style: const TextStyle(
                  fontSize: 18,
                  fontWeight: FontWeight.bold,
                ),
              ),
            ),
...
